-- ============================================================
-- TECAMBIOYA — Schema PostgreSQL v1
-- 14 tablas | FKs | Distribución regional
-- Fase 1: Nodo único (Lima)
-- Fases siguientes: distribuir por región con este mismo base
-- ============================================================

-- Extensión para UUIDs automáticos
CREATE EXTENSION IF NOT EXISTS "pgcrypto";

-- ==================
-- GEO
-- ==================
CREATE TABLE regiones (
    id        SERIAL PRIMARY KEY,
    nombre    VARCHAR(100) NOT NULL,
    codigo    VARCHAR(10)  UNIQUE NOT NULL,
    nodo_db   VARCHAR,                        -- host de BD regional (Fase 2)
    activo    BOOLEAN DEFAULT TRUE
);

-- ==================
-- CORE
-- ==================
CREATE TABLE usuarios (
    id               UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    nombre_completo  VARCHAR(150) NOT NULL,
    email            VARCHAR UNIQUE NOT NULL,
    password_hash    VARCHAR NOT NULL,
    tipo_cuenta      VARCHAR(10) CHECK (tipo_cuenta IN ('personal', 'corp')),
    dni_ruc          VARCHAR(20),
    telefono         VARCHAR(15),
    region_id        INTEGER REFERENCES regiones(id),
    activo           BOOLEAN DEFAULT TRUE,
    creado_en        TIMESTAMP DEFAULT NOW(),
    actualizado_en   TIMESTAMP DEFAULT NOW()
);

CREATE TABLE empresas (
    id                UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    ruc               VARCHAR(11) UNIQUE NOT NULL,
    razon_social      VARCHAR(200) NOT NULL,
    admin_usuario_id  UUID REFERENCES usuarios(id),
    region_id         INTEGER REFERENCES regiones(id),
    activo            BOOLEAN DEFAULT TRUE,
    creado_en         TIMESTAMP DEFAULT NOW()
);

-- ==================
-- ROLES
-- ==================
CREATE TABLE usuarios_empresa (
    id                   UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    empresa_id           UUID NOT NULL REFERENCES empresas(id),
    usuario_id           UUID NOT NULL REFERENCES usuarios(id),
    rol                  VARCHAR(10) CHECK (rol IN ('admin', 'operador', 'lector')),
    puede_operar         BOOLEAN DEFAULT FALSE,
    puede_ver_historial  BOOLEAN DEFAULT FALSE,
    creado_en            TIMESTAMP DEFAULT NOW()
);

-- ==================
-- BANCO
-- ==================
CREATE TABLE bancos (
    id          SERIAL PRIMARY KEY,
    nombre      VARCHAR(100) NOT NULL,
    codigo_bcp  VARCHAR(10),
    tipo        VARCHAR(15) CHECK (tipo IN ('banco', 'caja_mun')),
    logo_url    VARCHAR,
    activo      BOOLEAN DEFAULT TRUE
);

CREATE TABLE cuentas_bancarias (
    id              UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    usuario_id      UUID NOT NULL REFERENCES usuarios(id),
    banco_id        INTEGER NOT NULL REFERENCES bancos(id),
    numero_cuenta   VARCHAR(30) NOT NULL,
    cci             VARCHAR(30),
    moneda          VARCHAR(3) NOT NULL,      -- PEN, USD
    alias           VARCHAR(50),
    verificada      BOOLEAN DEFAULT FALSE,
    creado_en       TIMESTAMP DEFAULT NOW()
);

-- ==================
-- FX
-- ==================
CREATE TABLE tipos_cambio (
    id                 UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    moneda_origen      VARCHAR(3) NOT NULL,   -- USD
    moneda_destino     VARCHAR(3) NOT NULL,   -- PEN
    tasa_compra        DECIMAL(10,4) NOT NULL,
    tasa_venta         DECIMAL(10,4) NOT NULL,
    tasa_preferencial  DECIMAL(10,4),
    registrado_en      TIMESTAMP DEFAULT NOW(),
    vigente_hasta      TIMESTAMP
);

CREATE TABLE alertas_tipo_cambio (
    id             UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    usuario_id     UUID NOT NULL REFERENCES usuarios(id),
    moneda         VARCHAR(3) NOT NULL,
    tasa_objetivo  DECIMAL(10,4) NOT NULL,
    condicion      VARCHAR(10) CHECK (condicion IN ('mayor', 'menor')),
    canal_notif    VARCHAR(10) CHECK (canal_notif IN ('email', 'sms', 'push')),
    disparada      BOOLEAN DEFAULT FALSE,
    creado_en      TIMESTAMP DEFAULT NOW()
);

-- ==================
-- BENEFICIO
-- ==================
CREATE TABLE cupones (
    id             UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    codigo         VARCHAR(30) UNIQUE NOT NULL,
    tipo           VARCHAR(15) CHECK (tipo IN ('pips', 'porcentaje')),
    valor          DECIMAL(10,4) NOT NULL,
    usos_maximos   INTEGER NOT NULL,
    usos_actuales  INTEGER DEFAULT 0,
    monto_minimo   DECIMAL(15,2),
    vence_en       TIMESTAMP,
    activo         BOOLEAN DEFAULT TRUE
);

CREATE TABLE referidos (
    id                 UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    referidor_id       UUID NOT NULL REFERENCES usuarios(id),
    referido_id        UUID NOT NULL REFERENCES usuarios(id),
    cupon_generado_id  UUID REFERENCES cupones(id),
    completado         BOOLEAN DEFAULT FALSE,
    pips_ganados       DECIMAL(10,4) DEFAULT 0,
    creado_en          TIMESTAMP DEFAULT NOW()
);

-- ==================
-- TRANSACC
-- ==================
CREATE TABLE ordenes (
    id                 UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    numero_orden       VARCHAR UNIQUE NOT NULL,
    usuario_id         UUID NOT NULL REFERENCES usuarios(id),
    tipo_cambio_id     UUID NOT NULL REFERENCES tipos_cambio(id),
    cuenta_origen_id   UUID NOT NULL REFERENCES cuentas_bancarias(id),
    cuenta_destino_id  UUID NOT NULL REFERENCES cuentas_bancarias(id),
    monto_enviado      DECIMAL(15,2) NOT NULL,
    monto_recibido     DECIMAL(15,2),
    tasa_aplicada      DECIMAL(10,4) NOT NULL,
    estado             VARCHAR(15) CHECK (estado IN ('pendiente', 'procesando', 'completado', 'cancelado')),
    cupon_id           UUID REFERENCES cupones(id),
    region_id          INTEGER REFERENCES regiones(id),
    creado_en          TIMESTAMP DEFAULT NOW(),
    completado_en      TIMESTAMP
);

CREATE TABLE comprobantes (
    id                  UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    orden_id            UUID NOT NULL REFERENCES ordenes(id),
    numero_comprobante  VARCHAR UNIQUE NOT NULL,
    tipo                VARCHAR(10) CHECK (tipo IN ('recibo', 'factura', 'boleta')),
    url_pdf             VARCHAR,
    generado_en         TIMESTAMP DEFAULT NOW()
);

-- ==================
-- SISTEMA
-- ==================
CREATE TABLE notificaciones (
    id          UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    usuario_id  UUID NOT NULL REFERENCES usuarios(id),
    tipo        VARCHAR(15) CHECK (tipo IN ('orden', 'alerta', 'promo')),
    titulo      VARCHAR(200) NOT NULL,
    contenido   TEXT,
    leida       BOOLEAN DEFAULT FALSE,
    creado_en   TIMESTAMP DEFAULT NOW()
);

CREATE TABLE auditoria_sesiones (
    id          UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    usuario_id  UUID NOT NULL REFERENCES usuarios(id),
    ip_address  INET,
    user_agent  TEXT,
    accion      VARCHAR(15) CHECK (accion IN ('login', 'logout', 'operacion')),
    region_id   INTEGER REFERENCES regiones(id),
    creado_en   TIMESTAMP DEFAULT NOW()
);

-- ============================================================
-- ÍNDICES recomendados
-- ============================================================
CREATE INDEX idx_usuarios_email       ON usuarios(email);
CREATE INDEX idx_usuarios_region      ON usuarios(region_id);
CREATE INDEX idx_ordenes_usuario      ON ordenes(usuario_id);
CREATE INDEX idx_ordenes_estado       ON ordenes(estado);
CREATE INDEX idx_ordenes_region       ON ordenes(region_id);
CREATE INDEX idx_ordenes_creado       ON ordenes(creado_en DESC);
CREATE INDEX idx_tipos_cambio_vigente ON tipos_cambio(vigente_hasta);
CREATE INDEX idx_cuentas_usuario      ON cuentas_bancarias(usuario_id);
CREATE INDEX idx_notif_usuario_leida  ON notificaciones(usuario_id, leida);

-- ============================================================
-- DATOS SEMILLA (seed) — regiones del Perú
-- ============================================================
INSERT INTO regiones (nombre, codigo, nodo_db, activo) VALUES
    ('Lima',        'LIM', 'db-lima:5432',      TRUE),
    ('Arequipa',    'AQP', 'db-arequipa:5433',  FALSE),  -- activar en Fase 2
    ('Trujillo',    'TRU', 'db-trujillo:5434',  FALSE),  -- activar en Fase 2
    ('Cusco',       'CUS', 'db-cusco:5435',     FALSE),
    ('Piura',       'PIU', 'db-piura:5436',     FALSE);

-- ============================================================
-- DATOS SEMILLA — bancos principales del Perú
-- ============================================================
INSERT INTO bancos (nombre, codigo_bcp, tipo, activo) VALUES
    ('BCP',                    'BCP',  'banco',    TRUE),
    ('Interbank',              'IBK',  'banco',    TRUE),
    ('BBVA',                   'BBV',  'banco',    TRUE),
    ('Scotiabank',             'SCO',  'banco',    TRUE),
    ('Caja Arequipa',          'CAR',  'caja_mun', TRUE),
    ('Caja Huancayo',          'CHU',  'caja_mun', TRUE);
